# mcglauber

./: README.md  environment.yml  plot_event_xy.py  plot_glauber_events.py  pyproject.toml
config/: default.yaml
data/: sigma_nn_inel.csv
src/mcglauber/: cli.py  config.py  cross_section.py  event.py  geometry.py  io_utils.py  nucleus.py  observables.py  sampling.py  simulation.py
